# rocket-app

./: Cargo.toml
migrations/2020-12-01-174246_create_workers/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  schema.rs
