[package]
name = "rocket-app"
version = "0.1.0"
authors = ["adrian.kupiszewski"]
edition = "2018"

[dependencies]
rocket = {git = "https://github.com/SergioBenitez/Rocket/"}
serde_json = "1.0"
base64 = "0.13"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.14.1"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.18", features = ["serde"]}

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json", "diesel_postgres_pool"]
